The result of a 24 hours blood and tires