@@ -206,6 +206,7 @@ tasks.named('classes') {
 }
 
 application {
+    applicationDefaultJvmArgs += [ '--enable-native-access=org.lwjgl', '--enable-native-access=org.lwjgl.opengl' ]
     mainClass = 'com.losi.create.Startup'
     mainModule = 'com.losi.create'
 }
